
          Release Notes for Bacula 1.31

  Bacula code: Total files = 250 Total lines = 74,253 (*.h *.c *.in)

Major Changes this Release:
- The database format has changed. Please see below.
- Support to save and restore all files on WinNT/2K/XP systems 
  including the permissions. Unfortunately files that are in use by another
  program cannot be saved.
- Support for Win95 systems (untested since I don't have Win95).
- Heartbeat every 20 minutes between daemons to prevent network
  timeouts. The heartbeat interval can be set.
- Volume names may now only contain letters, numbers, colon, period, dash,
  and underscore.
- Added readline to depkgs (removed from depkgs1) and fixed configuration if
  it is not installed in your system libraries.
- Implemented generalized tape label formats including counter variables.


Other Changes this Release:
- Preliminary support for BSDi.
- Use smtp instead of mail to send the traceback message.
- Fixed a race condition in the "list" command while a backup is
  in progress.
- Beginning of support for SSL encryption.
- Beggining of support for Base level backups.
- Improvements to gnome-console.
- Prune certain orphaned jobs (no files saved, no Volume used).
- Added non-fatal errors to Job reports.
- Eliminate need for SubsysDirectory in each daemon -- please remove
  these records from your .conf files.
- Add a lot more "command line" options to console commands.
- More info in traceback (database type, ...).
- Better handling of errors with autochangers during restore.
- Better cancellation of jobs in Storage daemon (doesn't try
  to cleanup twice).
- SD error messages such as autochanger errors are now properly
  directed back to Console -- previously some were lost.
- A Storage daemon crash on FreeBSD systems (due to an improper FreeBSD
  pthreads implementation -- IMO) is fixed.
- Better Job termination report particularly for Verify and Restore jobs.
- Update Verify VolumeToCatalog to use new BSR records.