@@ -28,7 +28,6 @@ Testing to do: (painful)
 - Test multiple simultaneous Volumes
 - Test of last block is correct in JobMedia when splitting file 
   over two volumes.
-
 - Figure out how to use ssh or stunnel to protect Bacula communications.
 
 For 1.31 release:
@@ -984,4 +983,5 @@ Done: (see kernsdone for more)
 - Add restore to specific date.
 - Instrument use_count on DEVICE packets and ensure that the device is
   being close()ed at the appropriate time.
+- Test long path names (>64 chars) in Windows -- crashes FD?
 
